# Kpop-Dance-APP

./: .gitignore  DanceApp_PRD.md
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/api/: __init__.py
backend/api/app/: config.py  container.py  main.py
backend/contracts/fixtures/: analysis-result.json  dancers.json  error.json  identity.json  job.json  upload-session.json
backend/tests/: conftest.py  factories.py  fake_firestore.py
backend/tests/api/: test_analysis_routes.py  test_cloud_bootstrap.py  test_errors.py  test_health.py  test_identity.py  test_job_ownership.py  test_jobs.py  test_local_ai_pairing.py  test_privacy_logging.py  test_upload_cleanup.py  test_uploads.py
backend/tests/contracts/: test_cloud_script.py  test_container_structure.py  test_contracts.py  test_local_ai_demo_script.py  test_openapi.py  test_terraform_structure.py
backend/tests/smoke/: test_local_ai_real_chain.py  test_resumable_upload_smoke.py
backend/tests/unit/: test_analysis_coordinator.py  test_cloud_container.py  test_cloud_job_object_store.py  test_direct_upload_service.py  test_file_analysis_repository.py  test_firebase_auth.py  test_firestore_job_repository.py  test_firestore_upload_repository.py  test_gcs_object_store.py  test_gcs_upload_object_store.py  test_job_deletion.py  test_job_service.py  test_job_validation.py  test_local_analysis_runner.py  test_local_analysis_workspace.py  test_local_object_store.py  test_local_upload_object_store.py  test_upload_repository.py  test_upload_service.py
backend/workers/analysis/: dependency-licenses.json  (+3 more)
(+193 files in other folders)
