[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "stage-lab-backend"
version = "0.1.0"
description = "Local-first Stage Lab API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "firebase-admin>=6.6,<8",
    "google-cloud-firestore>=2.19,<3",
    "google-cloud-storage>=2.19,<4",
    "pydantic>=2.10,<3",
    "uvicorn>=0.34,<1",
]

[project.optional-dependencies]
dev = [
    "httpx2>=2.5,<3",
    "pytest>=8,<10",
    "pytest-asyncio>=0.25,<2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
