[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "stage-lab-analysis"
version = "0.1.0"
description = "Local Stage Lab dance-analysis worker"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy==1.26.4",
    "pydantic==2.13.4",
]

[project.optional-dependencies]
dev = ["pytest==9.1.1"]
inference = [
    "mmcv==2.1.0",
    "mmengine==0.10.7",
    "mmdet==3.3.0",
    "mmpose==1.3.2",
    "opencv-python-headless==4.11.0.86",
    "torch==2.13.0",
    "torchvision==0.28.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["stage_lab_analysis*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
